@@ -30,7 +30,11 @@ import com.netflix.spinnaker.clouddriver.cloudfoundry.artifacts.ArtifactCredenti
 import com.netflix.spinnaker.clouddriver.cloudfoundry.cache.CacheRepository;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.CloudFoundryClient;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.MockCloudFoundryClient;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.client.model.v3.ProcessRequest;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.config.CloudFoundryConfigurationProperties;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.deploy.description.DeployCloudFoundryServerGroupDescription;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundryDomain;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundryLoadBalancer;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundryOrganization;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundrySpace;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.provider.CloudFoundryProvider;
@@ -78,6 +82,12 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
 
       when(cloudFoundryClient.getApplications().findServerGroupId(any(), any()))
           .thenReturn("servergroup-id");
+
+      when(cloudFoundryClient.getDomains().getDefault())
+          .thenReturn(CloudFoundryDomain.builder().name("cf-app.com").build());
+      when(cloudFoundryClient.getRoutes().find(any(), any()))
+          .thenReturn(CloudFoundryLoadBalancer.builder().build())
+          .thenReturn(null);
     }
 
     return new CloudFoundryCredentials(
@@ -89,12 +99,15 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
         "password",
         "environment",
         false,
+        false,
         500,
         cacheRepository,
         null,
         ForkJoinPool.commonPool(),
         emptyMap(),
-        new OkHttpClient()) {
+        new OkHttpClient(),
+        new CloudFoundryConfigurationProperties.ClientConfig(),
+        new CloudFoundryConfigurationProperties.LocalCacheConfig()) {
       public CloudFoundryClient getClient() {
         return cloudFoundryClient;
       }
@@ -127,7 +140,7 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
 
   private final DeployCloudFoundryServerGroupAtomicOperationConverter converter =
       new DeployCloudFoundryServerGroupAtomicOperationConverter(
-          null, artifactCredentialsRepository, emptyList());
+          null, artifactCredentialsRepository, null);
 
   @BeforeEach
   void initializeClassUnderTest() {
@@ -174,7 +187,8 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setServices(List.of("service1"))
                 .setRoutes(List.of("www.example.com/foo"))
                 .setEnv(Map.of("token", "ASDF"))
-                .setCommand("some-command"));
+                .setCommand("some-command")
+                .setProcesses(emptyList()));
   }
 
   @Test
@@ -187,7 +201,8 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setInstances(1)
                 .setMemory("1024")
                 .setDiskQuota("1024")
-                .setBuildpacks(List.of("buildpack1")));
+                .setBuildpacks(List.of("buildpack1"))
+                .setProcesses(emptyList()));
   }
 
   @Test
@@ -200,7 +215,8 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setInstances(1)
                 .setMemory("1024")
                 .setDiskQuota("1024")
-                .setBuildpacks(Collections.emptyList()));
+                .setBuildpacks(Collections.emptyList())
+                .setProcesses(emptyList()));
   }
 
   @Test
@@ -213,7 +229,8 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setInstances(1)
                 .setMemory("1024")
                 .setDiskQuota("1024")
-                .setBuildpacks(Collections.emptyList()));
+                .setBuildpacks(Collections.emptyList())
+                .setProcesses(emptyList()));
   }
 
   @Test
@@ -233,7 +250,8 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
             "credentials",
             "test",
             "manifest",
-            ImmutableList.of(ImmutableMap.of("applications", ImmutableList.of(ImmutableMap.of()))));
+            ImmutableList.of(
+                ImmutableMap.of("applications", List.of(Map.of("random-route", true)))));
 
     DeployCloudFoundryServerGroupDescription result = converter.convertDescription(description);
 
@@ -244,5 +262,46 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
     assertThat(result.getApplicationArtifact().getArtifactAccount())
         .isEqualTo("destinationAccount");
     assertThat(result.getApplicationArtifact().getUuid()).isEqualTo("servergroup-id");
+    assertThat(result.getApplicationAttributes().getRoutes()).isNotEmpty();
+  }
+
+  @Test
+  void convertDescriptionWithProcesses() {
+    final Map input =
+        Map.of(
+            "applications",
+            List.of(
+                Map.of(
+                    "processes",
+                    List.of(
+                        new ProcessRequest().setType("web").setInstances(2).setMemory("800M")))));
+
+    assertThat(converter.convertManifest(input))
+        .isEqualToComparingFieldByFieldRecursively(
+            new DeployCloudFoundryServerGroupDescription.ApplicationAttributes()
+                .setInstances(1)
+                .setMemory("1024")
+                .setDiskQuota("1024")
+                .setBuildpacks(Collections.emptyList())
+                .setProcesses(
+                    List.of(
+                        new ProcessRequest().setType("web").setInstances(2).setMemory("800M"))));
+  }
+
+  @Test
+  void convertRandomRoutes() {
+    DeployCloudFoundryServerGroupDescription.ApplicationAttributes applicationAttributes =
+        converter.convertManifest(
+            ImmutableMap.of("applications", List.of(Map.of("random-route", true))));
+
+    assertThat(applicationAttributes.getRandomRoute()).isTrue();
+  }
+
+  @Test
+  void convertTimeout() {
+    DeployCloudFoundryServerGroupDescription.ApplicationAttributes applicationAttributes =
+        converter.convertManifest(ImmutableMap.of("applications", List.of(Map.of("timeout", 60))));
+
+    assertThat(applicationAttributes.getTimeout() == 60);
   }
 }
